--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,30 +13,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "LOADING DATA"
+    "## Columns in  `Train Data`\n",
+    "\n",
+    "- **Id**: unique identifier.\n",
+    "- **AB-GL**: Fifty six anonymized health characteristics. All are numeric except for *EJ*, which is categorical.\n",
+    "- **Class**: A binary target (what we would like to predict).\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_data = pd.read_csv(\"data/train.csv\", index_col=\"Id\")\n",
-    "test_data = pd.read_csv(\"data/test.csv\",index_col=\"Id\")\n",
-    "metadata = pd.read_csv(\"data/greeks.csv\")\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "VISUALIZE TRAIN DATA FILE"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -269,25 +255,412 @@
        "[5 rows x 57 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "train_data = pd.read_csv(\"data/train.csv\", index_col=\"Id\")\n",
     "train_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 617 entries, 000ff2bfdfe9 to ffcca4ded3bb\n",
+      "Data columns (total 57 columns):\n",
+      " #   Column  Non-Null Count  Dtype  \n",
+      "---  ------  --------------  -----  \n",
+      " 0   AB      617 non-null    float64\n",
+      " 1   AF      617 non-null    float64\n",
+      " 2   AH      617 non-null    float64\n",
+      " 3   AM      617 non-null    float64\n",
+      " 4   AR      617 non-null    float64\n",
+      " 5   AX      617 non-null    float64\n",
+      " 6   AY      617 non-null    float64\n",
+      " 7   AZ      617 non-null    float64\n",
+      " 8   BC      617 non-null    float64\n",
+      " 9   BD      617 non-null    float64\n",
+      " 10  BN      617 non-null    float64\n",
+      " 11  BP      617 non-null    float64\n",
+      " 12  BQ      557 non-null    float64\n",
+      " 13  BR      617 non-null    float64\n",
+      " 14  BZ      617 non-null    float64\n",
+      " 15  CB      615 non-null    float64\n",
+      " 16  CC      614 non-null    float64\n",
+      " 17  CD      617 non-null    float64\n",
+      " 18  CF      617 non-null    float64\n",
+      " 19  CH      617 non-null    float64\n",
+      " 20  CL      617 non-null    float64\n",
+      " 21  CR      617 non-null    float64\n",
+      " 22  CS      617 non-null    float64\n",
+      " 23  CU      617 non-null    float64\n",
+      " 24  CW      617 non-null    float64\n",
+      " 25  DA      617 non-null    float64\n",
+      " 26  DE      617 non-null    float64\n",
+      " 27  DF      617 non-null    float64\n",
+      " 28  DH      617 non-null    float64\n",
+      " 29  DI      617 non-null    float64\n",
+      " 30  DL      617 non-null    float64\n",
+      " 31  DN      617 non-null    float64\n",
+      " 32  DU      616 non-null    float64\n",
+      " 33  DV      617 non-null    float64\n",
+      " 34  DY      617 non-null    float64\n",
+      " 35  EB      617 non-null    float64\n",
+      " 36  EE      617 non-null    float64\n",
+      " 37  EG      617 non-null    float64\n",
+      " 38  EH      617 non-null    float64\n",
+      " 39  EJ      617 non-null    object \n",
+      " 40  EL      557 non-null    float64\n",
+      " 41  EP      617 non-null    float64\n",
+      " 42  EU      617 non-null    float64\n",
+      " 43  FC      616 non-null    float64\n",
+      " 44  FD      617 non-null    float64\n",
+      " 45  FE      617 non-null    float64\n",
+      " 46  FI      617 non-null    float64\n",
+      " 47  FL      616 non-null    float64\n",
+      " 48  FR      617 non-null    float64\n",
+      " 49  FS      615 non-null    float64\n",
+      " 50  GB      617 non-null    float64\n",
+      " 51  GE      617 non-null    float64\n",
+      " 52  GF      617 non-null    float64\n",
+      " 53  GH      617 non-null    float64\n",
+      " 54  GI      617 non-null    float64\n",
+      " 55  GL      616 non-null    float64\n",
+      " 56  Class   617 non-null    int64  \n",
+      "dtypes: float64(55), int64(1), object(1)\n",
+      "memory usage: 279.6+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_data.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>AB</th>\n",
+       "      <th>AF</th>\n",
+       "      <th>AH</th>\n",
+       "      <th>AM</th>\n",
+       "      <th>AR</th>\n",
+       "      <th>AX</th>\n",
+       "      <th>AY</th>\n",
+       "      <th>AZ</th>\n",
+       "      <th>BC</th>\n",
+       "      <th>BD</th>\n",
+       "      <th>...</th>\n",
+       "      <th>FL</th>\n",
+       "      <th>FR</th>\n",
+       "      <th>FS</th>\n",
+       "      <th>GB</th>\n",
+       "      <th>GE</th>\n",
+       "      <th>GF</th>\n",
+       "      <th>GH</th>\n",
+       "      <th>GI</th>\n",
+       "      <th>GL</th>\n",
+       "      <th>Class</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>617.000000</td>\n",
+       "      <td>617.000000</td>\n",
+       "      <td>617.000000</td>\n",
+       "      <td>617.000000</td>\n",
+       "      <td>617.000000</td>\n",
+       "      <td>617.000000</td>\n",
+       "      <td>617.000000</td>\n",
+       "      <td>617.000000</td>\n",
+       "      <td>617.000000</td>\n",
+       "      <td>617.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>616.000000</td>\n",
+       "      <td>617.000000</td>\n",
+       "      <td>615.000000</td>\n",
+       "      <td>617.000000</td>\n",
+       "      <td>617.000000</td>\n",
+       "      <td>617.000000</td>\n",
+       "      <td>617.000000</td>\n",
+       "      <td>617.000000</td>\n",
+       "      <td>616.000000</td>\n",
+       "      <td>617.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>0.477149</td>\n",
+       "      <td>3502.013221</td>\n",
+       "      <td>118.624513</td>\n",
+       "      <td>38.968552</td>\n",
+       "      <td>10.128242</td>\n",
+       "      <td>5.545576</td>\n",
+       "      <td>0.060320</td>\n",
+       "      <td>10.566447</td>\n",
+       "      <td>8.053012</td>\n",
+       "      <td>5350.388655</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5.433199</td>\n",
+       "      <td>3.533905</td>\n",
+       "      <td>0.421501</td>\n",
+       "      <td>20.724856</td>\n",
+       "      <td>131.714987</td>\n",
+       "      <td>14679.595398</td>\n",
+       "      <td>31.489716</td>\n",
+       "      <td>50.584437</td>\n",
+       "      <td>8.530961</td>\n",
+       "      <td>0.175041</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>0.468388</td>\n",
+       "      <td>2300.322717</td>\n",
+       "      <td>127.838950</td>\n",
+       "      <td>69.728226</td>\n",
+       "      <td>10.518877</td>\n",
+       "      <td>2.551696</td>\n",
+       "      <td>0.416817</td>\n",
+       "      <td>4.350645</td>\n",
+       "      <td>65.166943</td>\n",
+       "      <td>3021.326641</td>\n",
+       "      <td>...</td>\n",
+       "      <td>11.496257</td>\n",
+       "      <td>50.181948</td>\n",
+       "      <td>1.305365</td>\n",
+       "      <td>9.991907</td>\n",
+       "      <td>144.181524</td>\n",
+       "      <td>19352.959387</td>\n",
+       "      <td>9.864239</td>\n",
+       "      <td>36.266251</td>\n",
+       "      <td>10.327010</td>\n",
+       "      <td>0.380310</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.081187</td>\n",
+       "      <td>192.593280</td>\n",
+       "      <td>85.200147</td>\n",
+       "      <td>3.177522</td>\n",
+       "      <td>8.138688</td>\n",
+       "      <td>0.699861</td>\n",
+       "      <td>0.025578</td>\n",
+       "      <td>3.396778</td>\n",
+       "      <td>1.229900</td>\n",
+       "      <td>1693.624320</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.173229</td>\n",
+       "      <td>0.497060</td>\n",
+       "      <td>0.067730</td>\n",
+       "      <td>4.102182</td>\n",
+       "      <td>72.611063</td>\n",
+       "      <td>13.038894</td>\n",
+       "      <td>9.432735</td>\n",
+       "      <td>0.897628</td>\n",
+       "      <td>0.001129</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>0.252107</td>\n",
+       "      <td>2197.345480</td>\n",
+       "      <td>85.200147</td>\n",
+       "      <td>12.270314</td>\n",
+       "      <td>8.138688</td>\n",
+       "      <td>4.128294</td>\n",
+       "      <td>0.025578</td>\n",
+       "      <td>8.129580</td>\n",
+       "      <td>1.229900</td>\n",
+       "      <td>4155.702870</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.173229</td>\n",
+       "      <td>0.497060</td>\n",
+       "      <td>0.067730</td>\n",
+       "      <td>14.036718</td>\n",
+       "      <td>72.611063</td>\n",
+       "      <td>2798.992584</td>\n",
+       "      <td>25.034888</td>\n",
+       "      <td>23.011684</td>\n",
+       "      <td>0.124392</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>0.354659</td>\n",
+       "      <td>3120.318960</td>\n",
+       "      <td>85.200147</td>\n",
+       "      <td>20.533110</td>\n",
+       "      <td>8.138688</td>\n",
+       "      <td>5.031912</td>\n",
+       "      <td>0.025578</td>\n",
+       "      <td>10.461320</td>\n",
+       "      <td>1.229900</td>\n",
+       "      <td>4997.960730</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3.028141</td>\n",
+       "      <td>1.131000</td>\n",
+       "      <td>0.250601</td>\n",
+       "      <td>18.771436</td>\n",
+       "      <td>72.611063</td>\n",
+       "      <td>7838.273610</td>\n",
+       "      <td>30.608946</td>\n",
+       "      <td>41.007968</td>\n",
+       "      <td>0.337827</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>0.559763</td>\n",
+       "      <td>4361.637390</td>\n",
+       "      <td>113.739540</td>\n",
+       "      <td>39.139886</td>\n",
+       "      <td>8.138688</td>\n",
+       "      <td>6.431634</td>\n",
+       "      <td>0.036845</td>\n",
+       "      <td>12.969516</td>\n",
+       "      <td>5.081244</td>\n",
+       "      <td>6035.885700</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6.238814</td>\n",
+       "      <td>1.512060</td>\n",
+       "      <td>0.535067</td>\n",
+       "      <td>25.608406</td>\n",
+       "      <td>127.591671</td>\n",
+       "      <td>19035.709240</td>\n",
+       "      <td>36.863947</td>\n",
+       "      <td>67.931664</td>\n",
+       "      <td>21.978000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>6.161666</td>\n",
+       "      <td>28688.187660</td>\n",
+       "      <td>1910.123198</td>\n",
+       "      <td>630.518230</td>\n",
+       "      <td>178.943634</td>\n",
+       "      <td>38.270880</td>\n",
+       "      <td>10.315851</td>\n",
+       "      <td>38.971568</td>\n",
+       "      <td>1463.693448</td>\n",
+       "      <td>53060.599240</td>\n",
+       "      <td>...</td>\n",
+       "      <td>137.932739</td>\n",
+       "      <td>1244.227020</td>\n",
+       "      <td>31.365763</td>\n",
+       "      <td>135.781294</td>\n",
+       "      <td>1497.351958</td>\n",
+       "      <td>143790.071200</td>\n",
+       "      <td>81.210825</td>\n",
+       "      <td>191.194764</td>\n",
+       "      <td>21.978000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>8 rows × 56 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               AB            AF           AH          AM          AR  \\\n",
+       "count  617.000000    617.000000   617.000000  617.000000  617.000000   \n",
+       "mean     0.477149   3502.013221   118.624513   38.968552   10.128242   \n",
+       "std      0.468388   2300.322717   127.838950   69.728226   10.518877   \n",
+       "min      0.081187    192.593280    85.200147    3.177522    8.138688   \n",
+       "25%      0.252107   2197.345480    85.200147   12.270314    8.138688   \n",
+       "50%      0.354659   3120.318960    85.200147   20.533110    8.138688   \n",
+       "75%      0.559763   4361.637390   113.739540   39.139886    8.138688   \n",
+       "max      6.161666  28688.187660  1910.123198  630.518230  178.943634   \n",
+       "\n",
+       "               AX          AY          AZ           BC           BD   ...  \\\n",
+       "count  617.000000  617.000000  617.000000   617.000000    617.000000  ...   \n",
+       "mean     5.545576    0.060320   10.566447     8.053012   5350.388655  ...   \n",
+       "std      2.551696    0.416817    4.350645    65.166943   3021.326641  ...   \n",
+       "min      0.699861    0.025578    3.396778     1.229900   1693.624320  ...   \n",
+       "25%      4.128294    0.025578    8.129580     1.229900   4155.702870  ...   \n",
+       "50%      5.031912    0.025578   10.461320     1.229900   4997.960730  ...   \n",
+       "75%      6.431634    0.036845   12.969516     5.081244   6035.885700  ...   \n",
+       "max     38.270880   10.315851   38.971568  1463.693448  53060.599240  ...   \n",
+       "\n",
+       "               FL           FR          FS          GB           GE  \\\n",
+       "count  616.000000   617.000000  615.000000  617.000000   617.000000   \n",
+       "mean     5.433199     3.533905    0.421501   20.724856   131.714987   \n",
+       "std     11.496257    50.181948    1.305365    9.991907   144.181524   \n",
+       "min      0.173229     0.497060    0.067730    4.102182    72.611063   \n",
+       "25%      0.173229     0.497060    0.067730   14.036718    72.611063   \n",
+       "50%      3.028141     1.131000    0.250601   18.771436    72.611063   \n",
+       "75%      6.238814     1.512060    0.535067   25.608406   127.591671   \n",
+       "max    137.932739  1244.227020   31.365763  135.781294  1497.351958   \n",
+       "\n",
+       "                  GF          GH          GI          GL       Class  \n",
+       "count     617.000000  617.000000  617.000000  616.000000  617.000000  \n",
+       "mean    14679.595398   31.489716   50.584437    8.530961    0.175041  \n",
+       "std     19352.959387    9.864239   36.266251   10.327010    0.380310  \n",
+       "min        13.038894    9.432735    0.897628    0.001129    0.000000  \n",
+       "25%      2798.992584   25.034888   23.011684    0.124392    0.000000  \n",
+       "50%      7838.273610   30.608946   41.007968    0.337827    0.000000  \n",
+       "75%     19035.709240   36.863947   67.931664   21.978000    0.000000  \n",
+       "max    143790.071200   81.210825  191.194764   21.978000    1.000000  \n",
+       "\n",
+       "[8 rows x 56 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_data.describe()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "VISUALIZE METADATA CSV FILE"
+    "## Columns in  `Metadata`\n",
+    "\n",
+    "- **Alpha**: identifies the type of age-related condition, if present.\n",
+    "    - *A*: No age-related condition (Class 0).\n",
+    "    - *B*, *C*, *D*: The three age-related conditions (Class 1).\n",
+    "- **Beta**, **Gamma**, **Delta**: Three experimental characteristics.\n",
+    "- **Epsilon**: The date for this subject was collected.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -378,14 +751,51 @@
        "4  044fb8a146ec     D    B     F     B  3/25/2020"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "metadata = pd.read_csv(\"data/greeks.csv\")\n",
     "metadata.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 617 entries, 0 to 616\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column   Non-Null Count  Dtype \n",
+      "---  ------   --------------  ----- \n",
+      " 0   Id       617 non-null    object\n",
+      " 1   Alpha    617 non-null    object\n",
+      " 2   Beta     617 non-null    object\n",
+      " 3   Gamma    617 non-null    object\n",
+      " 4   Delta    617 non-null    object\n",
+      " 5   Epsilon  617 non-null    object\n",
+      "dtypes: object(6)\n",
+      "memory usage: 29.0+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "metadata.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -404,7 +814,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4
  },
