add analysis to metadata

--- a/main.ipynb
+++ b/main.ipynb
@@ -802,12 +802,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exploring data in metadata"
+    "## Exploring metadata"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -4139,6 +4139,9 @@
           }
          }
         },
+        "title": {
+         "text": "Distributions in metadata"
+        },
         "xaxis": {
          "anchor": "y",
          "domain": [
@@ -4214,7 +4217,22 @@
     "fig.add_trace(go.Histogram(x=metadata[\"Delta\"], histnorm='probability density',\n",
     "                           name=\"Delta\"), row=2, col=2)\n",
     "\n",
+    "fig.update_layout(title_text=\"Distributions in metadata\")\n",
+    "\n",
+    "\n",
     "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As we can see in the above figure, the distributions are very concentrated:\n",
+    "\n",
+    "- **Alpha**: At A (Class 0)\n",
+    "- **Beta**: At C - it is more spread than others\n",
+    "- **Gamma**: At M\n",
+    "- **Delta**: At B"
    ]
   },
   {
@@ -9719,6 +9737,20 @@
     "fig = px.histogram(metadata, x=\"Alpha\", histnorm='probability density', color=\"Delta\",\n",
     "                   pattern_shape=\"Gamma\")\n",
     "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Only some combinations among **Beta**, **Gamma** and **Delta** are available in *metadata* dataframe that could help our model to find tendencies"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exploring train data"
    ]
   },
   {
