Added columns from CB to DY in the analysis notebooks

--- a/feature_analysis/AB-AZ.ipynb
+++ b/feature_analysis/AB-AZ.ipynb
@@ -164,7 +164,7 @@
     "#Filtering outliers\n",
     "z_scores = stats.zscore(data)\n",
     "threshold = 3\n",
-    "data_filtered = data[(z_scores < threshold).all(axis=1)]\n",
+    "data_filtered = data[(abs(z_scores) < threshold).all(axis=1)]\n",
     "data.head()"
    ]
   },
