Adding Columns from EB to GL (end)

--- a/feature_analysis/DA-DY.ipynb
+++ b/feature_analysis/DA-DY.ipynb
@@ -8,8 +8,7 @@
    "source": [
     "import pandas as pd\n",
     "import seaborn as sns\n",
-    "from scipy import stats\n",
-    "import numpy as np"
+    "from scipy import stats"
    ]
   },
   {
@@ -189,7 +188,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Distribution for columns CB to CW ##"
+    "## Distribution for columns DA to DY ##"
    ]
   },
   {
