--- a/feature_analysis/GB-GL.ipynb
+++ b/feature_analysis/GB-GL.ipynb
@@ -162,7 +162,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Distribution for columns FC to FS ##"
+    "## Distribution for columns GB to GL ##"
    ]
   },
   {
