First prediction (used train.csv dataset for both training and validation of the model)

--- a/feature_analysis/GB-GL.ipynb
+++ b/feature_analysis/GB-GL.ipynb
@@ -152,7 +152,7 @@
     "\n",
     "\n",
     "#Filtering outliers\n",
-    "z_scores = stats.zscore(data) #EJ is categorical\n",
+    "z_scores = stats.zscore(data)\n",
     "threshold = 3\n",
     "data_filtered = data[(z_scores.abs() < threshold).all(axis=1)]\n",
     "data_filtered.head()"
